Update to system config